# credit_scoring

./: .gitignore  .gitlab-ci.yml  README.md  dvc.yaml  params.yaml  pyproject.toml  setup.cfg
.dvc/: config
data/: .gitignore  data.csv.dvc
notebooks/: hw_2.ipynb
src/app/antifraud/: antifraud.md  antifraud.py
src/app/core/: api.py  calculator.py  core_test.ipynb  model.py
src/app/modelling/baseline/: data_cleaning.py  decision_tree.py  decision_tree_pipe.pkl  logistic_regression.py  logistic_regression_pipe.pkl  model_comparison.ipynb
src/app/modelling/ensembles/: blending.py  ensemble_report.md  stacking.py  tune_lightgbm.py  tune_randomforest.py  tuned_lightgbm.pkl  tuned_randomforest.pkl
src/app/modelling/features/: application_train_test.py  bureau_bureaubalance.py  compose_train_test_data.py  credit_card_balance.py  data_cleaning.py  dvc_featurize.py  dvc_train_test_split.py  instalment_payments.py  previous_application.py
src/app/modelling/significant_features/: significant_features_application_train_test.py  significant_features_bureau.py  significant_features_bureau_balance.py  significant_features_credit_card.py  significant_features_installments_payments.py  significant_features_pos_cash_balance.py  significant_features_previous_application.py
src/app/utils/: database_manager.py  optuna_utils.py  preprocessing_utils.py  stat_utils.py
src/config/: config.py
src/hw_31/: log_parsing.py
src/hw_32/: hw_32.ipynb
tests/src/app/core/: test_calculator.py
