[tool.poetry]
name = "credit-scoring"
version = "0.1.0"
description = ""
authors = ["Igor Kuts <igor.kuts.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
tqdm = "^4.66.1"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.8"
scikit-learn = "^1.3.1"
optuna = "^3.3.0"
lightgbm = "^4.1.0"
seaborn = "^0.13.0"
scipy = "^1.11.3"
shap = "^0.43.0"
dvc = "^3.27.0"
wemake-python-styleguide = "^0.18.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
